--- a/apps.json
+++ b/apps.json
@@ -3,9 +3,9 @@
     "sourceName": "Binance Test App",
     "sourceAuthor": "Binance",
     "sourceLinkTitle": "主页",
-    "sourceLinkUrl": "https://gbox.run",
-    "sourceImage": "https://gbox.run/Public/images/source.png",
-    "sourceUpdateTime": "2022-07-13T16:00:00+0800",
+    "sourceLinkUrl": "https://github.com/BonnieBTC/MoneyApps",
+    "sourceImage": "https://raw.githubusercontent.com/BonnieBTC/MoneyApps/main/assets/logo.png",
+    "sourceUpdateTime": "2022-07-13T17:00:00+0800",
     "sourceDescription": "這裡分發最新版本的幣安測試 App",
     "appCategories": [
         "工具"
@@ -14,11 +14,11 @@
         {
             "appType": "SELF_SIGN",
             "appCateIndex": 0,
-            "appUpdateTime": "2022-07-13T16:00:00+0800",
+            "appUpdateTime": "2022-07-13T17:00:00+0800",
             "appName": "Binance Test App",
             "appVersion": "0.0.1",
-            "appImage": "https://raw.githubusercontent.com/qoli/GboxApps/main/assets/logo.png",
-            "appPackage": "https://github.com/qoli/GboxApps/blob/main/assets/fbinance.ipa?raw=true",
+            "appImage": "https://raw.githubusercontent.com/BonnieBTC/MoneyApps/main/assets/logo.png",
+            "appPackage": "https://github.com/BonnieBTC/MoneyApps/blob/main/assets/fbinance.ipa?raw=true",
             "appDescription": "首頁展示、錢包展示、錢包向鏈上地址轉帳"
         }
     ]
